[gd_scene load_steps=8 format=3 uid="uid://s60nsv4toap5"]

[ext_resource type="Script" uid="uid://b5o1gxp41pil6" path="res://scripts/enemy.gd" id="1_nfc0p"]
[ext_resource type="PackedScene" uid="uid://ccsvbnroj1a1h" path="res://scenes/bullet.tscn" id="2_c4w8v"]
[ext_resource type="Texture2D" uid="uid://da843mu7w2e0e" path="res://assets/entities/enemies/enemy.png" id="2_rgpw8"]
[ext_resource type="PackedScene" uid="uid://b8dh5j70ys8h2" path="res://scenes/sound_sensor.tscn" id="4_6cqy1"]
[ext_resource type="PackedScene" uid="uid://kf8tqdlm8c5t" path="res://addons/vision_cone_2d/vision_cone_2d_template.tscn" id="5_gugw6"]
[ext_resource type="PackedScene" uid="uid://dyjipdqqhb3nf" path="res://scenes/health_management.tscn" id="6_xwavj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk60s"]
size = Vector2(73, 96)

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("vision_renderer")]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_nfc0p")
vision_renderer = NodePath("VisionCone2D/VisionConeRenderer")
bullet_scene = ExtResource("2_c4w8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_mk60s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(-0.1, 0.1)
texture = ExtResource("2_rgpw8")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_mk60s")

[node name="SoundSensor" parent="." instance=ExtResource("4_6cqy1")]

[node name="VisionCone2D" parent="." instance=ExtResource("5_gugw6")]
rotation = -1.07694
angle_deg = 45
ray_count = 10
max_distance = 700.0

[node name="VisionConeRenderer" parent="VisionCone2D" index="0"]
modulate = Color(1, 1, 1, 0.258824)
self_modulate = Color(1, 1, 1, 0.278431)

[node name="DebugDraw" parent="VisionCone2D" index="2"]
color = Color(0.244856, 0.000662568, 0.560027, 0.47451)

[node name="HealthManagement" parent="." instance=ExtResource("6_xwavj")]
position = Vector2(-47, -66)
hurtbox = NodePath("../HurtBox")

[connection signal="body_entered" from="VisionCone2D/VisionConeArea" to="." method="_on_vision_cone_area_body_entered"]
[connection signal="body_exited" from="VisionCone2D/VisionConeArea" to="." method="_on_vision_cone_area_body_exited"]

[editable path="VisionCone2D"]
